# scylla-code-samples

./: .gitignore  .gitmodules  README.md  efficient_full_table_scan.go
CDC_Kafka_Lab/: README.md  docker-compose-scylladb.yml
Efficient_full_table_scan_with_CMD_support/: README.md
Elasticsearch_WRITE_path_using_.cql_and_.csv_as_inputs/: ES_insert_data_per_schema.py  README.md
Rust_CDRS/ps-logger/: Cargo.toml  README.md
Rust_Scylla_Driver/chat/: Cargo.toml  README.md
Rust_Scylla_Driver/fullscan/: Cargo.toml
Rust_Scylla_Driver/fullscan/src/: main.rs
Rust_Scylla_Driver/notes/restserver/: .env  Cargo.toml  README.md
Rust_Scylla_Driver/notes/restserver/schema/: ddl.sql
Rust_Scylla_Driver/notes/restserver/src/: main.rs
Rust_Scylla_Driver/notes/restserver/src/config/: mod.rs
Rust_Scylla_Driver/notes/restserver/src/data/: mod.rs  model.rs  rest_api.rs
Rust_Scylla_Driver/notes/restserver/src/db/: mod.rs  model.rs  scylladb.rs
Rust_Scylla_Driver/ps-logger/: Cargo.toml  README.md
alternator/getting-started/: README.md  read.py
alternator/tictactoe_example_app/: NOTICE.txt  README.md  config  requirements.txt
chunking-large-cells/cpp/: CMakeLists.txt  README.md  benchmark.cpp  demo.cpp  salted_blob_store.cpp  salted_blob_store.h
chunking-large-cells/python/: README.md  benchmark.py  demo.py  requirements.txt  salted_blob_store.py
cpp/part1/: .README.md.swp  .param_simple.cpp.swp  .prep.cpp.swp  README.md  connect.cpp  connect_unique.cpp  iterator.cpp  query.cpp
cpp/part2/: README.md  param_simple.cpp  prepared_statements.cpp
cross_region_replication_latency/: README.md  scylla-tester-reader_log.py  scylla-tester-writer.py
deploy_and_install_scylla_ansible_script/: README.md  scylla_deployment.yml  servers_example.ini
deploy_kairosdb/: 1_better_insert_data_25K.py  README.md  kairosdb_deploy.yml
dual_writes/: README.md  dual_writes.py
efficient_full_table_scan_example_code/: README.md  efficient_full_table_scan.go
elasticsearch-scylla/: README.md  docker-compose.backup  docker-compose.yml
elasticsearch-scylla/elasticsearch/: Dockerfile  start.sh
elasticsearch-scylla/kibana/: Dockerfile
elasticsearch-scylla/scylla/: Dockerfile  start.sh  test
elasticsearch-scylla/twitter/: Dockerfile  createKeyspace.js  elasticsearch.js  main.js  package.json
flink_streaming_into_scylla/: README.md
flink_streaming_into_scylla/flink-app/: dependency-reduced-pom.xml  pom.xml
gce_deploy_and_install_scylla_cluster/: README.md  gce_deploy_and_install_scylla_cluster.sh  scylla_install_orig.yml
gcp_cloud_bigtable_deploy/: README.md  gcp_cloud_bigtable_test.sh
helm-chart-scylla/: README.md  values.yaml
helm-chart-scylla/templates/: statefulset.yaml
install_scylla_ansible_playbook/: README.md
instruqt-examples/: INSTRUQT_README.md
instruqt-examples/alternator-getting-started/: README.md  create.py  read.py  write.py
instruqt-examples/go/: README.md  go.mod  go.sum
instruqt-examples/python-1/: app.py  challenge.py  step-1.py  step-2.py  step-3.py  step-4.py
instruqt-examples/python-2/: step-1.py  step-2.py  step-3.py
instruqt-examples/python-3/: step-1.py
instruqt-examples/scala/: README.md
instruqt-examples/scylladb-feature-store/: .gitignore  Dockerfile  QUICK_START.md  app.py  app_startup.sh  readme.md  (+5 more)
instruqt-examples/scylladb-feature-store/docs/: pyproject.toml
instruqt-examples/scylladb-feature-store/docs/_utils/: redirects.yaml
instruqt-examples/scylladb-feature-store/docs/source/: about-feature-stores.md  conf.py  credit-scoring-app.md  feast-scylladb-online-store.md  getting-started.md  index.rst  used-cars-app.md
iot-temperature-example/: README.md  billy.cql  go.mod  go.sum  util.go
kafka-scylladb/: pom.xml
kubernetes-alternator-demo/: Dockerfile  README.md  bootstrap.sh  cleanup.sh  cluster.sh  cluster.yaml  cluster_local.yaml  gke.sh  grafana-web-ui.sh  init.sh  monitoring.sh  operator.sh  tictactoe.sh  tictactoe.yaml  webinar.sh
kubernetes-operator-demo/: README.md  cassandra-stress.sh  cassandra-stress.yaml  cleanup.sh  cluster.yaml  edit-cluster.sh  init.sh  tests.cql  webinar.sh  webinar.sh~
kubernetes-scylla/: README.md  ready-probe.sh  scylla-service.yaml  scylla-statefulset.yaml  scylla-storageclass.yaml
kubernetes-university-live/: README.md  alternator.sh  alternator.yaml  cassandra-stress.yaml  cluster.yaml  cluster_tuned.yaml  gke.sh  init.sh  manager.yaml  monitoring.yaml  operator.yaml  scylla_cluster.sh  tictactoe.yaml
manager/: .README.md.swp  Dockerfile  README.md  docker-compose.yml
mms/: README.md  docker-compose-complete.yml  docker-compose-day3.yml  docker-compose-dc2.yml  docker-compose.yml  load-data-3.sh  load-data.sh  py1-load-data.sh
mms2/: README.md  docker-compose-day3.yml  docker-compose-dc2.yml
presto/: Dockerfile  Makefile  README.md  data.txt  docker-compose.yml
python-instruqt/: app.py  step-1.py  step-2.py  step-3.py  step-4.py
rita-analyzer/: README.md  build.sbt  spark-scylla.conf
rust/: Dockerfile
scylla-and-spark/: README.md
scylla-check-gossiper-generation/: README.md  scylla-check-gossiper-generation.sh
scylla_dcos/: README.md
scylla_elasticsearch_integration/: README.md  catalog.csv  insert_data_into_scylla+elastic.py  query_data_from_scylla+elastic.py
spark-scylla-migrator-demo/: README.md  config.yaml  prepare_target.cql  sample.cql  spark-env  spark-shell.sh  spark-shell25.sh  start-containers.sh  start-spark.sh  stop-spark.sh  submit_job-4execs.sh  submit_job-debug.sh  submit_job.sh  submit_job_validator.sh
spark3-scylla4-demo/: README.md  build.sbt  samplespark3.cql  spark3-shell.sh  start-scylla-container.sh  start-spark3.sh  stop-spark3.sh  submit_job_spark3.sh
time_series_python_code/: 1_insert_TS_direct_revised.py  1_insert_ts_direct_new.py  1_insert_ts_direct_scylla_25K.py  2_insert_ts_direct_scylla_25K.py  3_insert_ts_direct_scylla_25K.py  4_insert_ts_direct_scylla_25K.py  5_insert_ts_direct_scylla_25K.py  6_insert_ts_direct_scylla_25K.py  7_insert_ts_direct_scylla_25K.py  8_insert_ts_direct_scylla_25K.py  README.md  timeseries.py
(+504 files in other folders)
