#cargo-features = ["edition2024"]

[package]
name = "rust-fullscan"
version = "0.1.0"
edition = "2021"
#edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.4.5"
chrono = "0.4.38"
futures = "0.3.30"
num-bigint = "0.4.6"
scylla = "=0.14.0"
rand = "0.9.0-alpha.2"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["serde", "v4", "v5"] }

