#cargo-features = ["edition2024"]

[package]
name = "rust-fullscan"
version = "0.1.0"
edition = "2021"
#edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.40"
scylla = { version = "1.1.0", features = ["metrics"] }
rand = "0.9.0"
tokio = { version = "1.44.2", features = ["full"] }
uuid = { version = "1.16.0", features = ["serde", "v4", "v5"] }

