[package]
name = "restserver-notes"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
eyre = "0.6"
color-eyre = "0.6"
config = "0.13.3"
scylla = "0.8.1"
dotenv = "0.15"
num_cpus = "1.13"
url = "2.2"
tokio = {version = "1.18.4", features = ["rt-multi-thread", "macros"]  } #this has to match actix-web (actix-rt)
tokio-stream = "0.1"
lazy_static = "1.4.0"
rand = "0.8.5"
uuid = { version = "1.3.0", features = ["serde", "v4", "v5"] }
chrono = "0.4.24"
http = "0.2.9"
serde_with = "~3"
futures = "0.3.27"
strum = "0.24"
strum_macros = "0.24"