[package]
name = "restserver-notes"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
actix-web = "4.9.0"
actix-cors = "0.7.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
eyre = "0.6.12"
color-eyre = "0.6.3"
config = "0.14.0"
scylla = "1.0"
dotenv = "0.15"
num_cpus = "1.16.0"
url = "2.5.2"
tokio = { version = "1.40.0", features = [
    "rt-multi-thread",
    "macros",
] } #this has to match actix-web (actix-rt)
tokio-stream = "0.1.16"
lazy_static = "1.5.0"
rand = "0.9.0-alpha.2"
uuid = { version = "1.10.0", features = ["serde", "v4", "v5"] }
chrono = "0.4.38"
http = "1.1.0"
serde_with = "~3.9"
futures = "0.3.30"
strum = "0.26.3"
strum_macros = "0.26.4"
